fix: side-nav-bar의 gap 스타일을 margin에서 height로 수정

--- a/www/src/nav/SideNavBar.scss
+++ b/www/src/nav/SideNavBar.scss
@@ -50,7 +50,7 @@ side-nav-bar {
     div {
       line-height: 2rem;
       &.gap {
-        margin: 0.5rem;
+        height: 1rem;
       }
       a {
         white-space: nowrap;
